# Pr-ctica-2-Sistemas-Operativos-Avanzados

./: CMakeLists.txt  hebConcurrente.c  hebSecuencial.c  procConcurrente.c  procSecuencial.c
